:sparkles: Implementando Firebase Auth
Se implementan dependencias oficiales de firebase y se habilita el manejo de eventos relacionados a la autenticacion de usuarios. Se mejora la documentación del proyecto

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,11 @@
 # Created by https://www.toptal.com/developers/gitignore/api/reactnative,dotenv,macos,android,xcode,visualstudio
 # Edit at https://www.toptal.com/developers/gitignore?templates=reactnative,dotenv,macos,android,xcode,visualstudio
 
+### Custom ###
+# Inner (env)
+app/utils/firebase.js
+
+
 ### Android ###
 # Built application files
 *.apk
