--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@react-navigation/native": "~5.1.5",
     "@react-navigation/stack": "~5.2.10",
     "expo": "~40.0.0",
+    "expo-camera": "^9.1.1",
+    "expo-image-picker": "^9.2.1",
     "expo-status-bar": "~1.0.3",
     "firebase": "~7.9.0",
     "lodash": "^4.17.20",
