--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "expo": "~40.0.0",
     "expo-camera": "^9.1.1",
     "expo-image-picker": "^9.2.1",
+    "expo-location": "8.1.0",
     "expo-status-bar": "~1.0.3",
     "firebase": "~7.9.0",
     "lodash": "^4.17.20",
@@ -25,6 +26,7 @@
     "react-native-elements": "~1.2.7",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-keyboard-aware-scroll-view": "~0.9.1",
+    "react-native-maps": "~0.26.1",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.0",
