:sparkles: Añadiendo Agregar Restaurante para usuarios registrados
se implementa la funcionalidad para añadir un nuevo restaurante al sistema y guardarlos en la nube (google firestore)

--- a/app.json
+++ b/app.json
@@ -15,13 +15,16 @@
     },
     "assetBundlePatterns": ["**/*"],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.app.tenedores"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
       },
+      "package": "com.app.tenedores",
+
       "permissions": [
         "CAMERA_ROLL",
         "READ_EXTERNAL_STORAGE",
